# gesture-recognizer-widget

./: .gitignore  README.md  eslint.config.js  finger.ipynb  gesture_demo.ipynb  index.html  package-lock.json  package.json  pyproject.toml  rigid_body_scene.blend  styles.css  tsconfig.json  vite.config.ts  vite.widget.config.ts
.ipynb_checkpoints/: gesture_demo-checkpoint.ipynb
dist_py/: gesture_recognizer_widget-0.1.0-py3-none-any.whl
src/: app.ts  camera.ts  event-bus.ts  gesture-recognizer.ts  landmarks.ts  main.ts  renderer.ts  types.ts  ui.ts  websocket.ts  widget.ts
src_widget/: README.md  gesture_widget.py
src_widget/gesture_widget/: __init__.py
src_widget/gesture_widget/static/: widget.js
src_widget/static/: widget.css
