[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gesture-recognizer-widget"
description = "A Jupyter anywidget that streams live MediaPipe hand-landmark and gesture data from your webcam into Python."
readme = "src_widget/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jan-Hendrik Müller", email = "jan-hendrik.mueller@gmx.net" }]
keywords = ["anywidget", "jupyter", "mediapipe", "hand-tracking", "gesture-recognition", "webcam"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0",
    "ipywidgets>=8.0",
]

[tool.hatch.version]
path = "src_widget/gesture_widget/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src_widget/gesture_widget"]

[tool.hatch.build.targets.sdist]
include = [
    "src_widget/gesture_widget",
    "src_widget/README.md",
]
